<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apprenti.blablawild.SubmitItineraryActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/depart"
        android:textSize="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departure"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/depart"
        android:textSize="22dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/destination"
        android:textSize="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/destination"
        android:textSize="22dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/prix"
        android:textSize="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prix"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/prix"
        android:textSize="22dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/date"
        android:textSize="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departureDate"
        android:focusable="false"
        android:onClick="showDatePickerDialog"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="22dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/heureDepart"
        android:textSize="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departureTime"
        android:focusable="false"
        android:onClick="showTimePickerDialog"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="22dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/soumettre"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/publier"
        android:textSize="16dp"/>

</LinearLayout>